
AC_PREREQ(2.59)

AC_INIT(daimonin_client, [BETA3-0.966], [http://www.daimonin.net]) 
AC_CONFIG_AUX_DIR(make_utils)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(daimonin_client, BETA3-0.966)

AC_CONFIG_SRCDIR(../../src/client.c)
AC_PREFIX_DEFAULT(../../..)

AM_PROG_CC_C_O

AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL

AC_ARG_ENABLE(debug, 
   [  --enable-debug          compile in debug messages],
   [export USE_DEBUG=yes], 
   [export USE_DEBUG=no]
)

AC_ARG_ENABLE(sound,
   [  --enable-sound          compile with SDL sound (default)],
   [ if test "x$enableval" = "xyes" ; then
		AC_DEFINE(INSTALL_SOUND,, [ Use the SDL_mixer sound system. Remove when you have no sound card or slow computer])
	 fi 
   ],
   [AC_DEFINE(INSTALL_SOUND,, [ Use the SDL_mixer sound system. Remove when you have no sound card or slow computer])]
)

AC_ARG_ENABLE(opengl,
   [  --enable-opengl         compile with OpenGL support (experimental)],
   [  if test "x$enableval" = "xyes" ; then
	     AC_DEFINE(INSTALL_OPENGL,, [Use OpenGL to do the render/blits (experimental)])
	  fi
   ]
)

AC_ARG_ENABLE(win32,
   [  --enable-win32          compile with Win32 support],
   [  if test "x$enableval" = "xyes" ; then
		 AC_DEFINE(__WIN_32, 1, [Win32])
      else
		 AC_DEFINE(__LINUX, 1, [Linux])
      fi
   ],
   [ AC_DEFINE(__LINUX, 1, [Linux]) ]
)

AC_PATH_PROG(CP,cp)
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(RMDIR,rmdir)
AC_PATH_PROG(MKDIR,mkdir)

# Checks for SDL.  Note that we don't use AM_PATH_SDL because it's not always
# supported.
AC_CHECK_PROG(HAVE_SDL_CONFIG, [sdl-config], yes)
if test "$HAVE_SDL_CONFIG" = "yes"
then
  SDL_CFLAGS="`sdl-config --cflags` $CFLAGS"
  SDL_LIBS="`sdl-config --libs` $LIBS"
else
  AC_MSG_WARN([Can't find sdl-config, guessing required headers and libraries.])
fi
AC_CHECK_HEADERS([SDL/SDL.h], , AC_MSG_ERROR([Can't find SDL headers.]))
AC_CHECK_LIB([SDL], [SDL_Init], , AC_MSG_ERROR([Can't find SDL library.]))

AC_CHECK_FUNCS(stricmp strnicmp strcasecmp strncasecmp)
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([fcntl.h])

if test "x$prefix" != xNONE; then
   AC_DEFINE_UNQUOTED(PREFIX, "${prefix}", [Installation prefix])
else
   AC_DEFINE_UNQUOTED(PREFIX, "${ac_default_prefix}", [Installation prefix])
fi

AC_SUBST(SDL_LIBS)
AC_SUBST(SDL_CFLAGS)

AC_CONFIG_HEADER(../../src/include/define.h)
AC_OUTPUT(Makefile)
