SUBDIRS = fmod

noinst_HEADERS = \
	client.h  event.h     logfile.h  option.h      sprite.h      zconf.h \
	crc32.h   inffast.h   map.h      player.h      textinput.h   zlib.h \
	define.h  inflate.h   network.h  serverfile.h  textwindow.h  zutil.h \
	dialog.h  inftrees.h  npc.h      sound.h       tile_gfx.h
